eureka ,feign client去掉url的ip硬编码

--- a/horizon-demo-system/src/main/resources/i18n/messages_zh_CN.properties
+++ b/horizon-demo-system/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,3 +1,4 @@
 login.error=\u767B\u5F55\u5931\u8D25!
 user.name.exist.error=\u7528\u6237\u540D\u5DF2\u5B58\u5728\uFF01
 user.null.error=\u627E\u4E0D\u5230\u5BF9\u5E94\u7684\u7528\u6237
+old.pwd.not.blank=\u65E7\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
